--- a/prometheus-exporters-formula/metadata/form.yml
+++ b/prometheus-exporters-formula/metadata/form.yml
@@ -17,6 +17,11 @@ postgres_exporter:
     $type: boolean
     $default: False
 
+  listen_port:
+    $name: "Listen Port"
+    $type: number
+    $default: 9187
+
   data_source_name:
     $type: text
     $default: postgresql://user:passwd@localhost:5432/database?sslmode=disable
