Make bind options structure optional
- fix for removed default (introduced in 8392e6e938). When options
  were missing, pillar was generated as an empty string which then
  fails on state apply

--- a/bind-formula/form.yml
+++ b/bind-formula/form.yml
@@ -5,6 +5,7 @@ bind:
     $type: group
     options:
       $type: edit-group
+      $optional: True
       $prototype:
         $type: text
         $key:
