Add enabled checkbox

--- a/prometheus-formula/metadata/form.yml
+++ b/prometheus-formula/metadata/form.yml
@@ -1,6 +1,10 @@
 prometheus:
   $type: namespace
 
+  enabled:
+    $type: boolean
+    $default: True    
+
   scrape_interval:
     $type: number
     $name: Scrape interval (s)
