--- a/prometheus-formula/metadata/form.yml
+++ b/prometheus-formula/metadata/form.yml
@@ -3,21 +3,26 @@ prometheus:
 
   enabled:
     $type: boolean
-    $default: True    
+    $default: True
 
   scrape_interval:
     $type: number
     $name: Scrape interval (s)
     $default: 15
+    $disabled: "!prometheus.enabled"
+    $required: true
 
   evaluation_interval:
     $type: number
     $name: Evaluation interval (s)
     $default: 15
+    $disabled: "!prometheus.enabled"
+    $required: true
 
   mgr:
     $type: group
     $name: Uyuni Server
+    $disabled: "!prometheus.enabled"
 
     monitor_server:
       $name: Monitor this server
@@ -35,15 +40,18 @@ prometheus:
       $help: Username for auto-discovering clients
       $default: admin
       $visibleIf: .autodiscover_clients == true
+      $required: true
 
     sd_password:
       $type: password
       $name: Password
       $help: Password for auto-discovering clients
       $visibleIf: .autodiscover_clients == true
+      $required: true
 
   alerting:
     $type: group
+    $disabled: "!prometheus.enabled"
 
     alertmanager_service:
       $type: boolean
@@ -67,6 +75,7 @@ prometheus:
           $type: text 
           $name: "IP Address : Port"
           $default: localhost:9093
+          $match: ".*\\:\\d{1,5}"
 
     rule_files:
       $type: edit-group
@@ -74,12 +83,14 @@ prometheus:
       $prototype:
         $type: text
         $default: /etc/prometheus/my-rules.yml
+        $required: true
 
   scrape_configs:
     $type: edit-group
     $name: User defined scrape configurations
     $minItems: 0
     $itemName: File-based service discovery ${i}
+    $disabled: "!prometheus.enabled"
     $prototype:
       $type: group 
       $key:
@@ -91,5 +102,6 @@ prometheus:
         $prototype:
           $type: text
           $default: /etc/prometheus/my-scrape-config.yml
+          $required: true
 
 
