Adapt disabled and help

--- a/grafana-formula/metadata/form.yml
+++ b/grafana-formula/metadata/form.yml
@@ -4,55 +4,66 @@ grafana:
   enabled:
     $type: boolean
     $default: True
+    $help: disasbled grafana
 
   admin_user:
     $type: text
     $name: Default admin user
     $required: true
-    $disabled: "!grafana.enabled"
+    $disabled: "!formValues.grafana.enabled"
     
   admin_pass:
     $type: password
     $name: Default admin password  
     $required: true
-    $disabled: "!grafana.enabled"
+    $disabled: "!formValues.grafana.enabled"
 
   datasources:
     $type: group
-    $disabled: "!grafana.enabled"
+    $disabled: "!formValues.grafana.enabled"
+    $help: Configure the data sources used by Grafana.
 
     prometheus:
       $type: edit-group
       $minItems: 1
       $name: Prometheus
+      $help: Configure Prometheus data sources.
       $itemName: Prometheous data source ${i}
       $prototype:
         $type: group
-        $disabled: "!grafana.enabled"
+        $disabled: "!formValues.grafana.enabled"
         $key:
           $type: text
-          $name: Name
+          $name: Datasource name
           $default: Prometheus
+          $help: Data source name
         url:
           $type: text
           $default: http://localhost:9080
+          $match: "https?:\\/\\/[a-zA-Z-]+:\\d{1,5}\\/?"
           $required: true
+          $name: Prometheus URL
+          $help: URL of a Prometheus instance
 
   dashboards:
     $type: group
-    $disabled: "!grafana.enabled"
+    $disabled: "!formValues.grafana.enabled"
+    $help: Dashboards to install.
 
     add_uyuni_dashboard:
       $type: boolean
-      $name: Add Uyuni dashboard
+      $name: Uyuni server dashboard
+      $help: Add dashboard for monitoring an Uyuni server
       $default: True
 
     add_uyuni_clients_dashboard:
       $type: boolean
-      $name: Add Uyuni clients dashboard
+      $name: Uyuni clients dashboard
+      $help: Add dashboard for monitoring Uyuni clients
       $default: True
 
     add_postgresql_dasboard:
       $type: boolean
-      $name: Add PostgreSQL dashboard
+      $name: PostgreSQL dashboard
+      $help: Add dashboard for monitoring a PostgreSQL database
       $default: True 
