--- a/kitchensink-formula/metadata/form.yml
+++ b/kitchensink-formula/metadata/form.yml
@@ -67,5 +67,5 @@ kitchensync:
             field:
               $type: text
               $name: Yet another field
-              $placeholder: Enable/disable this field using the selecor in the group above
+              $placeholder: Enable/disable this field using the selector in the group above
               $disabled: 'this.parent.parent.parent.value.field != "Enable"'
