--- a/prometheus-exporters-formula/metadata/form.yml
+++ b/prometheus-exporters-formula/metadata/form.yml
@@ -1,5 +1,6 @@
 node_exporter:
   $type: group
+  $help: Prometheus exporter for hardware and OS metrics.
 
   enabled:
     $type: boolean
@@ -13,6 +14,7 @@ node_exporter:
 
 apache_exporter:
   $type: group
+  $help: Prometheus exporter for apache mod_status statistics.
 
   enabled:
     $type: boolean
@@ -26,6 +28,7 @@ apache_exporter:
 
 postgres_exporter:
   $type: group
+  $help: Prometheus exporter for PostgreSQL server metrics.
 
   enabled:
     $type: boolean
