fixup! grafana admin user and apache dashboard

--- a/grafana-formula/grafana/files/grafana.ini
+++ b/grafana-formula/grafana/files/grafana.ini
@@ -157,10 +157,10 @@ log_queries =
 #################################### Security ####################################
 [security]
 # default admin user, created on startup
-admin_user = {{ pillar.get("grafana:admin_user") }}
+admin_user = {{ salt['pillar.get']("grafana:admin_user") }}
 
 # default admin password, can be changed before first start of grafana,  or in profile settings
-admin_password = {{ pillar.get("grafana:admin_pass") }}
+admin_password = {{ salt['pillar.get']("grafana:admin_pass") }}
 
 # used for signing
 ;secret_key = SW2YcwTIb9zpOOhoPsMm
