--- a/salt-blackout-formula/metadata/pillar.example
+++ b/salt-blackout-formula/metadata/pillar.example
@@ -1,4 +1,4 @@
-# This file is part of locale-formula.
+# This file is part of blackout-formula.
 #
 # Foobar is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
