--- a/salt-blackout-formula/metadata/form.yml
+++ b/salt-blackout-formula/metadata/form.yml
@@ -22,7 +22,7 @@ minion_blackout:
 minion_blackout_whitelist:  
   $type: edit-group
   $name: Blackout whitelist
-  $help: Modules allowed during blackout. Removing the default values is not recommended. It can prevent Uyuni from working properly.
+  $help: Modules allowed during blackout. Removing the default values is not recommended because it can prevent Uyuni from working properly.
   $disabled: "!formValues.minion_blackout"
   $prototype:
     $type: text
