Fix $disabled exprs and replace $visibleIf with $visible

--- a/prometheus-formula/metadata/form.yml
+++ b/prometheus-formula/metadata/form.yml
@@ -9,20 +9,20 @@ prometheus:
     $type: number
     $name: Scrape interval (s)
     $default: 15
-    $disabled: "!prometheus.enabled"
+    $disabled: "!formValues.prometheus.enabled"
     $required: true
 
   evaluation_interval:
     $type: number
     $name: Evaluation interval (s)
     $default: 15
-    $disabled: "!prometheus.enabled"
+    $disabled: "!formValues.prometheus.enabled"
     $required: true
 
   mgr:
     $type: group
     $name: Uyuni Server
-    $disabled: "!prometheus.enabled"
+    $disabled: "!formValues.prometheus.enabled"
 
     monitor_server:
       $name: Monitor this server
@@ -39,19 +39,19 @@ prometheus:
       $name: Username
       $help: Username for auto-discovering clients
       $default: admin
-      $visibleIf: .autodiscover_clients == true
+      $visible: "this.parent.value.autodiscover_clients"
       $required: true
 
     sd_password:
       $type: password
       $name: Password
       $help: Password for auto-discovering clients
-      $visibleIf: .autodiscover_clients == true
+      $visible: "this.parent.value.autodiscover_clients"
       $required: true
 
   alerting:
     $type: group
-    $disabled: "!prometheus.enabled"
+    $disabled: "!formValues.prometheus.enabled"
 
     alertmanager_service:
       $type: boolean
@@ -62,7 +62,7 @@ prometheus:
       $type: boolean
       $name: Use local Alertmanager
       $help: Use local Alertmanager for this Prometheus instance
-      $visibleIf: .alertmanager_service == true
+      $visible: "this.parent.value.alertmanager_service"
       $default: True
 
     alertmanagers:
@@ -90,7 +90,7 @@ prometheus:
     $name: User defined scrape configurations
     $minItems: 0
     $itemName: File-based service discovery ${i}
-    $disabled: "!prometheus.enabled"
+    $disabled: "!formValues.prometheus.enabled"
     $prototype:
       $type: group 
       $key:
