--- a/prometheus-formula/metadata/form.yml
+++ b/prometheus-formula/metadata/form.yml
@@ -75,7 +75,7 @@ prometheus:
           $type: text 
           $name: "IP Address : Port"
           $default: localhost:9093
-          $match: ".*\\:\\d{1,5}"
+          $match: "\\S*:\\d{1,5}"
 
     rule_files:
       $type: edit-group
