--- a/system-lock-formula/metadata/form.yml
+++ b/system-lock-formula/metadata/form.yml
@@ -1,13 +1,13 @@
 minion_blackout:
   $type: boolean
   $default: False
-  $name: System lock
+  $name: Lock system
   $help: Disable all remote execution commands
 
 minion_blackout_whitelist:  
   $type: edit-group
   $name: Allowed Salt modules
-  $help: Removing the default values is not recommended because it can prevent Uyuni from working properly.
+  $help: Removing the default values is not recommended because it may prevent Uyuni from working properly.
   $disabled: "!formValues.minion_blackout"
   $prototype:
     $type: text
