fixup! make allowed modules field required

--- a/system-lock-formula/metadata/form.yml
+++ b/system-lock-formula/metadata/form.yml
@@ -11,6 +11,7 @@ minion_blackout_whitelist:
   $disabled: "!formValues.minion_blackout"
   $prototype:
     $type: text
+    $required: true
   $default:
   - test.ping
   - grains.item
