--- a/grafana-formula/metadata/form.yml
+++ b/grafana-formula/metadata/form.yml
@@ -11,10 +11,10 @@ grafana:
     $name: Default admin user
     $required: true
     $disabled: "!formValues.grafana.enabled"
-    
+
   admin_pass:
     $type: password
-    $name: Default admin password  
+    $name: Default admin password
     $required: true
     $disabled: "!formValues.grafana.enabled"
 
@@ -39,7 +39,7 @@ grafana:
           $help: Data source name
         url:
           $type: url
-          $default: http://localhost:9080
+          $default: http://localhost:9090
           $required: true
           $name: Prometheus URL
           $help: URL of a Prometheus instance
@@ -72,3 +72,21 @@ grafana:
       $name: Apache HTTPD dashboard
       $help: Add dashboard for monitoring an Apache HTTPD server
       $default: True
+
+    add_k8s_dashboard:
+      $type: boolean
+      $name: Kubernetes cluster dashboard
+      $help: Add dashboard for monitoring a Kubernetes cluster
+      $default: False
+
+    add_etcd_dashboard:
+      $type: boolean
+      $name: Kubernetes etcd dashboard
+      $help: Add dashboard for monitoring an etcd daemon
+      $default: False
+
+    add_k8s_namespaces_dashboard:
+      $type: boolean
+      $name: Kubernetes namespaces dashboard
+      $help: Add dashboard for monitoring Kubernetes namespaces
+      $default: False
