Move general rules to the dedicate file
* Add general-rules.yml
* Add logic for enabling default alerting rules

--- a/prometheus-formula/metadata/form.yml
+++ b/prometheus-formula/metadata/form.yml
@@ -65,6 +65,11 @@ prometheus:
       $visible: "this.parent.value.alertmanager_service"
       $default: True
 
+    default_rules:
+      $type: boolean
+      $default: True
+      $name: Enable default alerting rules
+
     alertmanagers:
       $type: edit-group
       $minItems: 0
