--- a/virtualization-host-formula/metadata/form.yml
+++ b/virtualization-host-formula/metadata/form.yml
@@ -25,7 +25,7 @@ default_pool:
     $name: Pool local path
     $default: /var/lib/libvirt/images
     $help: Path to the folder containing the disk images
-    $optional: false
+    $required: true
 
 default_net:
   $type: group
@@ -43,6 +43,7 @@ default_net:
     $help: Name of the network bridge interface to use
     $placeholder: br0
     $visibleIf: default_net#mode == "Bridged"
+    $required: true
 
   ipv4:
     $type: group
