Add hint that ssl certs must be on system
Applying the formula fails when it tries to start the openvpn@system
systemd service if these files are missing.

Related: https://github.com/SUSE/spacewalk/issues/11601

--- a/openvpn-formula/metadata/form.yml
+++ b/openvpn-formula/metadata/form.yml
@@ -116,6 +116,7 @@ openvpn:
 
     ssl:
       $type: group
+      $help: Required SSL/TLS certificates and key file. When "Location" is set to "local", ensure the files are in present on the OpenVPN server system before applying the highstate!
 
       ca_group:
         $type: group
