Disable Prometheus proxy in the form on default

--- a/prometheus-exporters-formula/metadata/form.yml
+++ b/prometheus-exporters-formula/metadata/form.yml
@@ -1,6 +1,7 @@
 proxy_enabled:
   $type: boolean
   $name: Enable reverse proxy
+  $default: False
   $help: Install reverse proxy for Prometheus exporters
 
 proxy_port:
