virthost: bridge network by default
Bridge network is the default created by YaST. Do the same in the
virtualization host formula.

--- a/virtualization-host-formula/metadata/form.yml
+++ b/virtualization-host-formula/metadata/form.yml
@@ -35,7 +35,7 @@ default_net:
   mode:
     $type: select
     $values: ["NAT", "Bridge"]
-    $default: "NAT"
+    $default: "Bridge"
 
   bridge:
     $type: text
